--- a/index.html
+++ b/index.html
@@ -62,12 +62,11 @@
     </div>
 
     <div class="respuesta">
-      <button id="send">Enviar</button>
+      <button class="btn" id="send">Enviar</button>
     </div>
   </div>
-<script src="script.js">
-//crear otro boton para reiniciar el juego donde se vuelve a la pantalla donde se escribe el nombre
-   
+<script src="script.js"> </script> 
+     
 </body>
 
 </html>
